cluster/gitops/monitoring/goldilocks/app/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  labels:
    app.kubernetes.io/name: goldilocks
    app.kubernetes.io/component: dashboard
    app.kubernetes.io/instance: goldilocks
spec:
  hostnames:
    - goldilocks.${SECRET_PUBLIC_DOMAIN_NAME}
  parentRefs:
    - name: internal-gateway
      namespace: networking
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          port: 80
