cluster/gitops/monitoring/goldilocks/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: goldilocks
specs:
  - description: controller
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: goldilocks
        app.kubernetes.io/component: controller
        app.kubernetes.io/instance: goldilocks
    egress:
      # Manage k8s resources
      - &to_k8s_api_server
        toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
  - description: dashboard
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: goldilocks
        app.kubernetes.io/component: dashboard
        app.kubernetes.io/instance: goldilocks
    egress:
      # Get k8s resources
      - *to_k8s_api_server
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
      # Ingress from internal gateway
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              app.kubernetes.io/name: ingress-gateways
              gateway.networking.k8s.io/gateway-name: internal-gateway
        toPorts:
          - ports:
              - port: "8080"
                protocol: TCP
